--- a/app/src/main/res/layout/custom_times_dialog_row.xml
+++ b/app/src/main/res/layout/custom_times_dialog_row.xml
@@ -16,8 +16,7 @@
         android:id="@+id/ll_custom_times_details"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:visibility="gone">
+        android:orientation="vertical">
 
         </LinearLayout>
 </LinearLayout>
