--- a/app/src/main/res/layout/fragment_coursetime_add_edit.xml
+++ b/app/src/main/res/layout/fragment_coursetime_add_edit.xml
@@ -38,11 +38,21 @@
                     android:paddingRight="@dimen/activity_horizontal_margin"
                     android:paddingTop="@dimen/activity_vertical_margin">
 
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:background="@android:color/transparent"
+                        android:focusable="true"
+                        android:focusableInTouchMode="true">
+                    </LinearLayout>
                     <com.rengwuxian.materialedittext.MaterialEditText
-                        android:id="@+id/emptytxt"
+                        android:id="@+id/tv_dt_onceDate"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-
+                        android:layout_height="wrap_content"
+                        android:hint="@string/dt_oneDate_hint"
+                        app:iconLeft="@drawable/ic_today_white"
+                        app:floatingLabel="highlight"
+                        app:iconPadding="10dp" />
                     <com.rengwuxian.materialedittext.MaterialEditText
                         android:id="@+id/tv_dt_startTime1"
                         android:layout_width="match_parent"
@@ -66,16 +76,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/dt_daysOfWeek_hint"
-                        app:iconLeft="@drawable/ic_today_white"
-                        app:floatingLabel="highlight"
-                        app:iconPadding="10dp" />
-
-
-                    <com.rengwuxian.materialedittext.MaterialEditText
-                        android:id="@+id/tv_dt_onceDate"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/dt_oneDate_hint"
                         app:iconLeft="@drawable/ic_today_white"
                         app:floatingLabel="highlight"
                         app:iconPadding="10dp" />
