--- a/app/src/main/res/layout/fragment_note_image.xml
+++ b/app/src/main/res/layout/fragment_note_image.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -10,71 +12,94 @@
         android:background="?colorPrimary"
         android:orientation="horizontal"
         android:paddingBottom="16dp"
-        android:paddingLeft="45dp"
+        android:paddingLeft="72dp"
         android:paddingRight="16dp"
         android:elevation="5dp"
         android:paddingTop="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"
-            android:text="Subject"
+            app:baseColor="@android:color/white"
+            app:floatingLabel="highlight"
+            android:hint="@string/note_name"
+            android:textColor="@color/white"
             android:paddingRight="35dp"
-            android:textColor="@android:color/white"
-            android:layout_gravity="bottom|left"
-            android:id="@+id/txtNoteSubject" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:text="Date"
-            android:textColor="@android:color/white"
-            android:layout_gravity="bottom"
-            android:id="@+id/txtNoteAddDate" />
-
-
+            android:layout_gravity="left"
+            android:id="@+id/txtNoteName" />
 
     </LinearLayout>
-
-    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
-
-
-
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/txtNoteImageView"
-            android:src="@drawable/ic_launcher"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="0.3"
-            android:padding="5dp"/>
-
-
-
-    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
-
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/scrollView2"
-        android:layout_gravity="bottom"
-        android:layout_weight="0.7"
+        android:scrollbarStyle="outsideOverlay"
         android:padding="5dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="New Text"
-            android:textSize="25sp"
-            android:id="@+id/txtNoteDetail"
-            android:layout_gravity="center_horizontal"
-            android:padding="5dp" />
-    </ScrollView>
 
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:orientation="vertical">
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteSubject"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Subject"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:indeterminate="false" />
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteAddDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:enabled="false"
+                android:indeterminate="false" />
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/note_detail_hint"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:indeterminate="false" />
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/txtNoteImageView"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="5dp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/img_delete"
+                    android:src="@drawable/delete"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="5dp" />
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/img_uploadNew"
+                    android:src="@drawable/add_new"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="5dp" />
+                </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 
 
 </LinearLayout>
