--- a/app/src/main/res/layout/fragment_note_text_view.xml
+++ b/app/src/main/res/layout/fragment_note_text_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -10,49 +12,69 @@
         android:background="?colorPrimary"
         android:orientation="horizontal"
         android:paddingBottom="16dp"
-        android:paddingLeft="45dp"
+        android:paddingLeft="72dp"
         android:paddingRight="16dp"
         android:elevation="5dp"
         android:paddingTop="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"
-            android:text="Subject"
+            android:hint="@string/note_name"
+            android:textColor="@color/white"
+            app:baseColor="@android:color/white"
+            app:floatingLabel="highlight"
             android:paddingRight="35dp"
-            android:layout_gravity="bottom|left"
-            android:id="@+id/txtNoteSubject" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:text="Date"
-            android:layout_gravity="bottom"
-            android:id="@+id/txtNoteAddDate" />
+            android:layout_gravity="left"
+            android:id="@+id/txtNoteName" />
 
     </LinearLayout>
 
-    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
+    <include
+        android:id="@+id/shadow_main_activity"
+        layout="@layout/toolbar_shadow" />
 
-    <ScrollView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbarStyle="outsideInset">
+
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
             android:id="@+id/compoundView">
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Subject"
+                app:iconLeft="@drawable/ic_today_white"
+                android:layout_gravity="bottom|left"
+                android:id="@+id/txtNoteSubject" />
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteAddDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:enabled="false"
+                android:indeterminate="false" />
 
-
-
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/note_detail_hint"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:indeterminate="false" />
         </LinearLayout>
     </ScrollView>
-
 
 
 </LinearLayout>
