--- a/app/src/main/res/layout/fragment_note_video.xml
+++ b/app/src/main/res/layout/fragment_note_video.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -10,72 +12,120 @@
         android:background="?colorPrimary"
         android:orientation="horizontal"
         android:paddingBottom="16dp"
-        android:paddingLeft="45dp"
+        android:paddingLeft="72dp"
         android:paddingRight="16dp"
         android:elevation="5dp"
         android:paddingTop="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"
-            android:text="Subject"
+            app:baseColor="@android:color/white"
+            app:floatingLabel="highlight"
+            android:hint="@string/note_name"
+            android:textColor="@color/white"
             android:paddingRight="35dp"
-            android:textColor="@android:color/white"
-            android:layout_gravity="bottom|left"
-            android:id="@+id/txtNoteSubject" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:text="Date"
-            android:textColor="@android:color/white"
-            android:layout_gravity="bottom"
-            android:id="@+id/txtNoteAddDate" />
-
+            android:layout_gravity="left"
+            android:id="@+id/txtNoteName" />
 
 
     </LinearLayout>
 
-    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
+    <include
+        android:id="@+id/shadow_main_activity"
+        layout="@layout/toolbar_shadow" />
 
-    <FrameLayout
-    	   android:layout_width="fill_parent"
-    	   android:layout_height="match_parent"
-    	   android:layout_gravity="center"
-         android:layout_weight="0.3"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scrollView2"
+        android:layout_gravity="bottom"
+        android:layout_weight="0.7"
+        android:padding="5dp">
 
-    	     <VideoView
-    	        android:id="@+id/video_view"
-    	        android:layout_width="match_parent"
-    	        android:layout_height="wrap_content"
-    	        android:layout_gravity="center"/>
-    </FrameLayout>
-    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
-
-        <ScrollView
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="fill_parent"
             android:layout_height="match_parent"
-            android:id="@+id/scrollView2"
-            android:layout_gravity="bottom"
-            android:layout_weight="0.7"
-            android:padding="5dp">
-            <TextView
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin">
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteSubject"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Subject"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:indeterminate="false" />
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteAddDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:enabled="false"
+                android:indeterminate="false" />
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/note_detail_hint"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:indeterminate="false" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="New Text"
-                android:textSize="25sp"
-                android:id="@+id/txtNoteDetail"
-                android:layout_gravity="center_horizontal"
-                android:padding="5dp" />
-        </ScrollView>
+                android:gravity="center">
+
+                <FrameLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp">
+
+                    <RelativeLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal">
+
+                        <VideoView
+                            android:id="@+id/video_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/img_delete"
+                            android:src="@drawable/delete"
+                            android:layout_gravity="center_horizontal"
+                            android:padding="5dp" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/img_uploadNew"
+                            android:src="@drawable/add_new"
+                            android:layout_gravity="center_horizontal"
+                            android:padding="5dp" />
+                    </RelativeLayout>
+                </FrameLayout>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
 
-
-    </LinearLayout>
+</LinearLayout>
