--- a/app/src/main/res/layout/fragment_note_voice_view.xml
+++ b/app/src/main/res/layout/fragment_note_voice_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -10,129 +12,28 @@
         android:background="?colorPrimary"
         android:orientation="horizontal"
         android:paddingBottom="16dp"
-        android:paddingLeft="45dp"
+        android:paddingLeft="72dp"
         android:paddingRight="16dp"
         android:elevation="5dp"
         android:paddingTop="16dp">
 
-        <TextView
-            android:layout_width="wrap_content"
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textSize="25sp"
-            android:text="Subject"
-            android:textColor="@android:color/white"
+            app:baseColor="@android:color/white"
+            app:floatingLabel="highlight"
+            android:hint="@string/note_name"
+            android:textColor="@color/white"
             android:paddingRight="35dp"
-            android:layout_gravity="bottom|left"
-            android:id="@+id/txtNoteSubject" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:text="Date"
-            android:textColor="@android:color/white"
-            android:layout_gravity="bottom"
-            android:id="@+id/txtNoteAddDate" />
-
-
+            android:layout_gravity="left"
+            android:id="@+id/txtNoteName" />
 
     </LinearLayout>
 
-    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_weight="0.3"
-    android:orientation="horizontal">
-
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.40"></LinearLayout>
-
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.15"
-        android:gravity="center">
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.44"></LinearLayout>
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.50">
-
-
-        <ToggleButton
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-            android:textOff=" "
-            android:textOn=" "
-                android:id="@+id/playPauseVoiceBtn"
-            android:background="@drawable/play_pause_button_style"
-                android:layout_weight="0.20"
-            android:checked="false"
-            android:elevation="10dp" />
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.25"></LinearLayout>
-
-            <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Stop"
-            android:id="@+id/stopVoiceBtn"
-            android:layout_weight="0.20"
-                android:background="@drawable/stop" />
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.44"></LinearLayout>
-
-    </LinearLayout>
-
-
-
-
-    <LinearLayout
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0.40"></LinearLayout>
-
-
-
-
-
-
-
-
-</LinearLayout>
-
-
-
-    <include  android:id="@+id/shadow_main_activity" layout="@layout/toolbar_shadow" />
-
+    <include
+        android:id="@+id/shadow_main_activity"
+        layout="@layout/toolbar_shadow" />
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -140,13 +41,103 @@
         android:layout_gravity="bottom"
         android:layout_weight="0.7"
         android:padding="5dp">
-        <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="New Text"
-            android:textSize="25sp"
-            android:id="@+id/txtNoteDetail"
-            android:layout_gravity="center_horizontal"
-            android:padding="5dp" />
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteSubject"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Subject"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:indeterminate="false" />
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteAddDate"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:enabled="false"
+                android:indeterminate="false" />
+
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/txtNoteDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="@string/note_detail_hint"
+                app:iconLeft="@drawable/ic_today_white"
+                app:floatingLabel="highlight"
+                app:iconPadding="10dp"
+                android:indeterminate="false" />
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="40dp">
+
+
+                <ToggleButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textOff=" "
+                    android:textOn=" "
+                    android:id="@+id/playPauseVoiceBtn"
+                    android:background="@drawable/play_pause_button_style"
+                    android:layout_weight="0.50"
+                    android:checked="false"
+                    android:layout_marginRight="16dp"
+                    android:elevation="10dp" />
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/img_delete"
+                        android:src="@drawable/delete"
+                        android:layout_gravity="center_horizontal"
+                        android:padding="5dp" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/img_uploadNew"
+                        android:src="@drawable/add_new"
+                        android:layout_gravity="center_horizontal"
+                        android:padding="5dp" />
+                </RelativeLayout>
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Stop"
+                    android:id="@+id/stopVoiceBtn"
+                    android:layout_weight="0.50"
+                    android:layout_marginLeft="16dp"
+                    android:background="@drawable/stop" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
+
+
     </ScrollView>
 </LinearLayout>
