--- a/app/src/main/res/layout/fragment_task_view.xml
+++ b/app/src/main/res/layout/fragment_task_view.xml
@@ -18,7 +18,7 @@
             android:background="?colorPrimary"
             android:orientation="horizontal"
             android:paddingBottom="16dp"
-            android:paddingLeft="45dp"
+            android:paddingLeft="72dp"
             android:paddingRight="16dp"
             android:elevation="5dp"
             android:paddingTop="16dp">
@@ -92,6 +92,15 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/task_due_date_hint"
+                    app:iconLeft="@drawable/ic_today_white"
+                    app:floatingLabel="highlight"
+                    app:iconPadding="10dp" />
+
+                <com.rengwuxian.materialedittext.MaterialEditText
+                    android:id="@+id/txtTaskDueTime"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/task_due_time_hint"
                     app:iconLeft="@drawable/ic_today_white"
                     app:floatingLabel="highlight"
                     app:iconPadding="10dp" />
