Jaffer  Last update

--- a/app/src/main/res/layout/fragment_note_add_edit.xml
+++ b/app/src/main/res/layout/fragment_note_add_edit.xml
@@ -70,7 +70,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:hint="@string/note_name"
+                    android:hint="@string/note_add_subtitle"
                     android:textColor="@color/white"
                     android:textColorHint="@color/white"
                     android:padding="8dp"
